--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -144,7 +144,7 @@ jobs:
           echo "Inputs="$(echo $Inputs | jq @json) >> $GITHUB_OUTPUT
 
   oracle-gather-delius-statistics:
-    if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.GatherNewStatistics == 'yes') }}
+    if: ${{ (github.event_name == 'workflow_dispatch' && (github.event.inputs.GatherNewStatistics == 'yes' || github.event.inputs.ExportBackupStatisticsToS3 == 'yes') }}
     needs: [oracle-pre-delius-statistics]
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
@@ -204,7 +204,7 @@ jobs:
           ${{ github.event.inputs.VerboseOutput }}
 
   oracle-export-remote-delius-statistics:
-    if: ${{ needs.oracle-pre-delius-statistics.outputs.ImportSourceEnvironment != 'None' || needs.oracle-pre-delius-statistics.outputs.ExportBackupStatisticsToS3 == 'yes' }}
+    if: ${{ needs.oracle-pre-delius-statistics.outputs.ImportSourceEnvironment != 'None' }}
     needs: [oracle-pre-delius-statistics]
     environment: ${{ needs.oracle-pre-delius-statistics.outputs.ImportSourceEnvironment }}-preapproved
     runs-on: ubuntu-latest
