--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -194,7 +194,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} \
+          -e hosts=${{ needs.oracle-pre-delius-statistics.outputs.TargetHost }} \
           -e import_source_environment=None \
           -e gather_new_statistics=${{ github.event.inputs.GatherNewStatistics }} \
           -e statistics_identifier=${{ github.event.inputs.StatisticsIdentifier }} \
