DST-19341 - Test run

--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -17,6 +17,7 @@ on:
         description: "NDelius version to uplift to"
         required: true
         type: string
+  push:
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
