--- a/playbooks/delius_db_uplift/playbook.yml
+++ b/playbooks/delius_db_uplift/playbook.yml
@@ -2,29 +2,29 @@
   hosts: "{{ target_hosts }}"
 
   tasks:
-    - name: Disable Oracle OEM Alerts
-      import_playbook: ../oem_blackout/playbook.yml
-      vars:
-        target: "{{ target_hosts }}"
-        blackout: "UPLIFT"
-        object_type: all
-        action: start
-        duration: 03:00
-
-    - name: Block connections to primary database
-      import_playbook: ../block_sessions/playbook.yml
-      vars:
-        target_host: delius_primarydb
-        action: block
-
-    - name: Create restore point
-      import_playbook: ../oracle_restore_points/playbook.yml
-      when:
-        - create_restore_point | bool
-      vars:
-        target_dbs: "{{ target_hosts }}"
-        required_action: "Create Restore Point"
-        restore_point_name: "UPLIFT"
+#    - name: Disable Oracle OEM Alerts
+#      import_playbook: ../oem_blackout/playbook.yml
+#      vars:
+#        target: "{{ target_hosts }}"
+#        blackout: "UPLIFT"
+#        object_type: all
+#        action: start
+#        duration: 03:00
+#
+#    - name: Block connections to primary database
+#      import_playbook: ../block_sessions/playbook.yml
+#      vars:
+#        target_host: delius_primarydb
+#        action: block
+#
+#    - name: Create restore point
+#      import_playbook: ../oracle_restore_points/playbook.yml
+#      when:
+#        - create_restore_point | bool
+#      vars:
+#        target_dbs: "{{ target_hosts }}"
+#        required_action: "Create Restore Point"
+#        restore_point_name: "UPLIFT"
 
     - name: Uplift Oracle database
       hosts: "{{ target_hosts }}"
@@ -112,17 +112,17 @@
 #              script: update_read_only_role.sh
 #              register: update_read_only_role
 #              changed_when: update_read_only_role.stdout | int > 0
-
-    - name: Unblock connections to primary database
-      import_playbook: ../block_sessions/playbook.yml
-      vars:
-        target_host: delius_primarydb
-        action: unblock
-
-    - name: Re-enable Oracle OEM alerts
-      import_playbook: ../oem_blackout/playbook.yml
-      vars:
-        target: "{{ target_hosts }}"
-        object_type: all
-        action: stop
-        blackout: "UPLIFT"
+#
+#    - name: Unblock connections to primary database
+#      import_playbook: ../block_sessions/playbook.yml
+#      vars:
+#        target_host: delius_primarydb
+#        action: unblock
+#
+#    - name: Re-enable Oracle OEM alerts
+#      import_playbook: ../oem_blackout/playbook.yml
+#      vars:
+#        target: "{{ target_hosts }}"
+#        object_type: all
+#        action: stop
+#        blackout: "UPLIFT"
