--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -101,6 +101,6 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -vvv -i $inventory -e target_hosts=${{ steps.definetargets.outputs.primary_db_host }} \
-          -e ndelius_version=${{ github.event.inputs.Version }}
-          -e environment=${{ github.event.inputs.TargetEnvironment }}
+          -e ndelius_version=${{ github.event.inputs.Version }} \
+          -e environment=${{ github.event.inputs.TargetEnvironment }} \
           -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}
