--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -1,7 +1,7 @@
 name: "Oracle: Schedule Toggle Fast Start Failover"
 on:
   schedule:
-    - cron: '0,10,20,30,40,50 14,15 * * FRI'
+    - cron: '0,10,20,30,40,50 11,15,16 * * MON-FRI'
     - cron: '00 14 * * TUE'
     - cron: '00 10 * * THU'
     - cron: '00 14 * * THU'
