--- a/playbooks/oem_blackout/oem-blackout/tasks/main.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/main.yml
@@ -3,6 +3,10 @@
     path: "{{ emctl_agent }}"
   register: agent_emctl
 
+- name: Determine if Diagnostics Pack is enabled
+  set_fact:
+    has_diagnostic_pack: "{{ database_parameters.control_management_pack_access | default('') is search('.*DIAGNOSTIC.*') }}"
+
 - block:
     - name: Find out target name
       shell: |
@@ -60,4 +64,8 @@
 
   when:
     - agent_emctl.stat.exists
-    - database_parameters.control_management_pack_access | default('') is search('.*DIAGNOSTIC.*')
+    - when: has_diagnostic_pack
+
+- name: Disable OEM Script-Based Monitoring if no Diagnostic Pack
+  include_tasks: script_exclusion.yml
+  when: not has_diagnostic_pack
