--- a/playbooks/oem_blackout/oem-blackout/tasks/main.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/main.yml
@@ -5,7 +5,9 @@
 
 - name: Determine if Diagnostics Pack is enabled
   set_fact:
-    has_diagnostic_pack: "{{ database_parameters.control_management_pack_access | default('') is search('.*DIAGNOSTIC.*') }}"
+    has_diagnostic_pack: >-
+      {{ (database_parameters.control_management_pack_access is defined) and
+         (database_parameters.control_management_pack_access | default('') is search('.*DIAGNOSTIC.*')) }}
 
 - block:
     - name: Find out target name
