DBA-915 Disable OEM script-based monitoring if no diagnostic pack (#568)
* Update main.yml
Fix for checking diagnostic pack
Add call to script_exclusion.yml if no Diagnostic pack in place for the target

* Update script_exclusion.yml
Fixed issue with incorrect use of strftime in exclude_timeout
Handle no duration being passed in
Refactor exclude_comment as it wasn't printing out the default text

* Update oracle-db-oem-blackout.yml
Add access to secretsmanager-passwords for running the playbook

--- a/playbooks/oem_blackout/oem-blackout/tasks/main.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/main.yml
@@ -3,6 +3,12 @@
     path: "{{ emctl_agent }}"
   register: agent_emctl
 
+- name: Determine if Diagnostics Pack is enabled
+  set_fact:
+    has_diagnostic_pack: >-
+      {{ (database_parameters.control_management_pack_access is defined) and
+         (database_parameters.control_management_pack_access | default('') is search('.*DIAGNOSTIC.*')) }}
+
 - block:
     - name: Find out target name
       shell: |
@@ -60,4 +66,8 @@
 
   when:
     - agent_emctl.stat.exists
-    - database_parameters.control_management_pack_access | default('') is search('.*DIAGNOSTIC.*')
+    - has_diagnostic_pack
+
+- name: Disable OEM Script-Based Monitoring if no Diagnostic Pack
+  include_tasks: script_exclusion.yml
+  when: not has_diagnostic_pack
