--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -16,13 +16,21 @@
 - name: Temporarily Exclude Host from Monitoring
   when: action == 'start'
   block:
-    - name: Define Timeout for Monitoring Exclusion Period
+    - name: Create blackout name fact if defined
       set_fact:
-        exclude_timeout: "{{ '%Y-%m-%d-%H-%M-%S' | strftime( ( ansible_date_time.epoch | int ) + duration ) }}"
+        blackout_name: "{{ blackout }}"
+      when: (blackout is defined) and (blackout|length > 0)
+
+    - name: Create blackout name fact if not defined
+      set_fact:
+        blackout_name: "Maintenance"
+      when: ((blackout is defined) and (blackout|length == 0)) or (blackout is not defined)
 
     - name: Define Exclude Comment For Host
       set_fact:
-        exclude_comment: "{{ 'Excluded from monitoring due to ' + ( blackout | default('UNNAMED_EXCLUSION')) + ' until ' + exclude_timeout }}"
+        exclude_comment: >-
+          {{ 'Excluded from monitoring due to ' + blackout_name }}
+          {{ ' until ' + strftime('%Y-%m-%d-%H-%M-%S', (ansible_date_time.epoch | int) + (duration | int)) if (duration is defined and duration | int > 0) else '' }}
 
     - name: Get Sysman Password
       include_tasks: get_facts.yml
