--- a/playbooks/oracle_statistics/oracle_statistics/tasks/import_remote_stats.yml
+++ b/playbooks/oracle_statistics/oracle_statistics/tasks/import_remote_stats.yml
@@ -1,18 +1,3 @@
-# Only check if Statistics have already been exported if a Statistics identifier has been specified
-# - name: Check if Named Export {{ remote_statistics_identifier }} of Statistics Already Exists on Remote Bucket
-#   amazon.aws.s3_object:
-#     bucket: "{{ remote_environment_name }}-oracle-db-statistics-backup-data"
-#     prefix: "datapump/{{ remote_statistics_identifier }}.dmp"
-#     mode: list
-#   register: get_already_exists
-
-# - name: Set Export Already Run if Backup Already Exists on S3
-#   set_fact:
-#     already_exists: true
-#   when:
-#     - statid is defined
-#     - ('datapump/' + remote_statistics_identifier + '.dmp') in get_already_exists.s3_keys
-
 # We need to get the Canonical ID of the current account to grant permission when copying the remote statistics dump to the local environment
 - name: Get Canonical ID
   shell: aws s3api list-buckets --query Owner.ID --output text
@@ -43,10 +28,10 @@
     . ~/.bash_profile
     impdp \"/ as sysdba\" dumpfile={{ remote_statistics_identifier }}.dmp logfile={{ remote_statistics_identifier }}.import.log directory=DATA_PUMP_DIR tables=DELIUS_USER_SUPPORT.STATISTICS_BACKUP table_exists_action=APPEND
 
-# - name: Import Schema Statistics from Backup Table into Data Dictionary using Statid {{ remote_statistics_identifier }}
-#   script: import_schema_statistics.sh "{{ schema }}" "{{ remote_statistics_identifier }}"
-#   register: import_schema_statistics
-#   changed_when: import_schema_statistics.stdout is search('.*Imported.*')
-#   loop: "{{ all_schemas | upper }}"
-#   loop_control:
-#     loop_var: schema
+- name: Import Schema Statistics from Backup Table into Data Dictionary using Statid {{ remote_statistics_identifier }}
+  script: import_schema_statistics.sh "{{ schema }}" "{{ remote_statistics_identifier }}"
+  register: import_schema_statistics
+  changed_when: import_schema_statistics.stdout is search('.*Imported.*')
+  loop: "{{ all_schemas | upper }}"
+  loop_control:
+    loop_var: schema
