--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -204,7 +204,7 @@ jobs:
           ${{ github.event.inputs.VerboseOutput }}
 
   oracle-export-remote-delius-statistics:
-    if: ${{ always() && needs.oracle-pre-delius-statistics.outputs.ImportSourceEnvironment != 'None' && (needs.oracle-gather-delius-statistics.result == 'success' || needs.oracle-gather-delius-statistics.result == 'skipped') }}
+    if: ${{ always() && needs.oracle-pre-delius-statistics.outputs.ImportSourceEnvironment != 'None' && needs.oracle-gather-delius-statistics.result == 'skipped' }}
     needs: [oracle-pre-delius-statistics,oracle-gather-delius-statistics]
     environment: ${{ needs.oracle-pre-delius-statistics.outputs.ImportSourceEnvironment }}-preapproved
     runs-on: ubuntu-latest
@@ -283,7 +283,7 @@ jobs:
           -e export_to_s3=yes ${{ needs.oracle-pre-delius-statistics.outputs.VerboseOutput }}
 
   oracle-import-delius-statistics:
-    if: ${{ needs.oracle-export-remote-delius-statistics.result == 'success' && needs.oracle-export-remote-delius-statistics.outputs.ImportSourceEnvironment != 'None' }}
+    if: ${{ needs.oracle-export-remote-delius-statistics.result == 'success' }}
     needs: [oracle-export-remote-delius-statistics]
     environment: ${{ needs.oracle-export-remote-delius-statistics.outputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
