--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -52,7 +52,7 @@ jobs:
           sparse-checkout: |
              .github/workflows/oracle-db-toggle-fsfo-schedule.json
           path: operations
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'DBA-849' }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Filter Toggle FSFO Schedule
@@ -221,7 +221,7 @@ jobs:
         matrix: ${{fromJson(needs.prepare-filtered-run-matrix.outputs.scheduled_matrix)}}
       name: Toggle FSFO
       uses:
-        ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-toggle-fsfo.yml@DBA-849
+        ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-toggle-fsfo.yml@main
       with:
         TargetEnvironment: ${{ matrix.TargetEnvironment }}
         FSFOMode: ${{ matrix.Action }}
