--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -30,12 +30,32 @@
         blackout_name: "Maintenance"
       when: ((blackout is defined) and (blackout|length == 0)) or (blackout is not defined)
 
+    - name: Convert duration to seconds if in [days] hh:mm format
+      set_fact:
+        duration_seconds: >-
+          {% if duration is string %}
+            {% set parts = duration.split(' ') %}
+            {% if parts | length == 2 %}
+              {% set days = parts[0] | int %}
+              {% set time = parts[1].split(':') %}
+            {% else %}
+              {% set days = 0 %}
+              {% set time = parts[0].split(':') %}
+            {% endif %}
+            {{ (days * 86400) + ((time[0] | int) * 3600) + ((time[1] | int) * 60) }}
+          {% else %}
+            {{ duration | int }}
+          {% endif %}
+
     - name: Define Exclude Comment For Host
       set_fact:
         exclude_comment: >-
           {{ 'Excluded from monitoring due to ' + blackout_name }}
-          {{ ' until ' + ((ansible_date_time.epoch | int) + (duration | int) | strftime('%Y-%m-%d-%H-%M-%S')) if (duration is defined and (duration | int > 0)) else '' }}
-
+          {{ ' until ' + ((ansible_date_time.epoch | int) + duration_seconds | int) 
+            | to_datetime('%s') 
+            | strftime('%Y-%m-%d-%H-%M-%S') 
+            if (duration_seconds is defined and duration_seconds > 0) else '' }}
+            
     - name: Get Sysman Password
       include_tasks: get_facts.yml
 
