--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -42,7 +42,7 @@
         action: "start"
         object_type: "all"
         blackout: "PASSWORD_ROTATION_{{ environment_name }}"
-        duration: 7200
+        duration: "02:00"
         allow_jobs: false
 
 - name: Get Primary Database Type And Environment
