--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
@@ -13,7 +13,7 @@
         action: "start"
         object_type: "all"
         blackout: "PASSWORD_ROTATION_{{ environment_name }}"
-        duration: 7200
+        duration: "02:00"
         allow_jobs: false
 
 # Check the databases configured on the OEM server.
