--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -26,11 +26,35 @@
         blackout_name: "Maintenance"
       when: ((blackout is defined) and (blackout|length == 0)) or (blackout is not defined)
 
+    - name: Convert duration to seconds
+      set_fact:
+        duration_seconds: >-
+          {% if duration is string and ':' in duration %}
+            {% set parts = duration.split(' ') %}
+            {% if parts | length == 2 %}
+              {% set days = parts[0] | int %}
+              {% set time_parts = parts[1].split(':') %}
+            {% else %}
+              {% set days = 0 %}
+              {% set time_parts = parts[0].split(':') %}
+            {% endif %}
+            {{ (days * 86400) + (time_parts[0] | int * 3600) + (time_parts[1] | int * 60) }}
+          {% else %}
+            {{ duration | int }}
+          {% endif %}
+
+    - name: Calculate end timestamp
+      set_fact:
+        end_timestamp: "{{ (ansible_date_time.epoch | int) + (duration_seconds | int) }}"
+      when: duration_seconds is defined and duration_seconds | int > 0
+
     - name: Define Exclude Comment For Host
       set_fact:
         exclude_comment: >-
           {{ 'Excluded from monitoring due to ' + blackout_name }}
-          {{ ' until ' + strftime('%Y-%m-%d-%H-%M-%S', (ansible_date_time.epoch | int) + (duration | int)) if (duration is defined and duration | int > 0) else '' }}
+          {%- if duration_seconds is defined and duration_seconds | int > 0 %}
+          {{ ' until ' + '%Y-%m-%d-%H-%M-%S' | strftime(end_timestamp) }}
+          {%- endif %}
 
     - name: Get Sysman Password
       include_tasks: get_facts.yml
